syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.test.inspectors.grpc.proto";
option java_outer_classname = "ProtoGrpc";

package grpc.proto;

service ProtoService {
  rpc DoProtoRpc (ProtoRequest) returns (ProtoResponse) {}
}

message ProtoRequest {
  string name = 1;
}

message ProtoResponse {
  string message = 1;
  repeated string item = 2;
}